fix: top container alignments

--- a/sass/bottom-container.sass
+++ b/sass/bottom-container.sass
@@ -1,8 +1,11 @@
 .bottom-container
     display: flex
 
-    &__right-side__data__data-container
-        display: flex
-
+    &__right-side
         
-    
+        &__data__data-container
+            display: flex
+
+        &__bottom-images
+            display: flex
+        
