--- a/sass/top-container.sass
+++ b/sass/top-container.sass
@@ -1,5 +1,23 @@
 .top-container
     display: flex
+    justify-content: space-around
+
+    &__main
+        width: 26%
+
+        &__h1
+            font-size: 5rem
+
+        &__image
+            width: 375px
+            height: 279px
+
+        &__description
+            font-size: 1.375rem
 
     &__projects
         display: flex
+
+        &__image
+            width: 382px
+            height: 630px
